--- a/flutter_app2/ios/Runner/Info.plist
+++ b/flutter_app2/ios/Runner/Info.plist
@@ -40,6 +40,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<false/>	
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>Using location is required to locate product</string>
 </dict>
 </plist>
