--- a/flutter_app2/pubspec.yaml
+++ b/flutter_app2/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   scoped_model: "^1.0.1"
   http: ^0.12.0+1
   shared_preferences: ^0.5.1+1
+  rxdart: ^0.20.0
+  map_view:
+    git:
+      url: git://github.com/maxschwarzmueller/flutter_google_map_view
 
 dev_dependencies:
   flutter_test:
