--- a/flutter_app2/pubspec.yaml
+++ b/flutter_app2/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   map_view:
     git:
       url: git://github.com/maxschwarzmueller/flutter_google_map_view
+  location: ^2.0.0
 
 dev_dependencies:
   flutter_test:
